<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.belellou.kevin</groupId>
    <artifactId>advent-of-code</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Advent of Code</name>
    <description>Personal repository to develop and store my answers to the incredible puzzles from adventofcode.com</description>
    <url>https://github.com/kevin-belellou/advent-of-code</url>

    <developers>
        <developer>
            <name>Kévin Belellou</name>
        </developer>
    </developers>

    <properties>
        <requireMavenVersion>3.6.3</requireMavenVersion>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Enable JEPs in preview -->
        <!-- Must be declared here and not in surefire configuration to avoid erasing JaCoCo configuration -->
        <argLine>--enable-preview</argLine>

        <!-- Dependency versions -->
        <assertj.version>3.27.7</assertj.version>
        <commons-codec.version>1.21.0</commons-codec.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <ejml-simple.version>0.44.0</ejml-simple.version>
        <gson.version>2.13.2</gson.version>
        <jgrapht-core.version>1.5.2</jgrapht-core.version>
        <junit.version>6.0.2</junit.version>
        <spring-context.version>7.0.3</spring-context.version>
        <throwing-function.version>1.6.1</throwing-function.version>

        <!-- Plugin versions -->
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <modernizer-maven-plugin.version>3.2.0</modernizer-maven-plugin.version>
        <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <!-- Message digest (like md5) -->
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <!-- Json parsing -->
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <!-- Stream functions for avoiding exceptions -->
            <groupId>com.pivovarit</groupId>
            <artifactId>throwing-function</artifactId>
            <version>${throwing-function.version}</version>
        </dependency>
        <dependency>
            <!-- Some utils -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <!-- Matrices -->
            <groupId>org.ejml</groupId>
            <artifactId>ejml-simple</artifactId>
            <version>${ejml-simple.version}</version>
        </dependency>
        <dependency>
            <!-- Graphs -->
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
            <version>${jgrapht-core.version}</version>
        </dependency>
        <dependency>
            <!-- Class search -->
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring-context.version}</version>
        </dependency>

        <!-- Test scope -->
        <dependency>
            <!-- Better assertions -->
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <!-- JUnit test framework -->
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>${versions-maven-plugin.version}</version>

                    <configuration>
                        <ruleSet>
                            <ignoreVersions>
                                <ignoreVersion>
                                    <!-- Ignore non-production versions when checking for updates -->
                                    <type>regex</type>
                                    <version>(.+-SNAPSHOT|.+-M\d|.+-alpha.*|.+-beta.*|.+-rc.*|.+-RC.*)</version>
                                </ignoreVersion>
                            </ignoreVersions>
                        </ruleSet>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <!-- Check Maven version -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>

                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>

                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>${requireMavenVersion}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <!-- Compiler configuration -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>

                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <!-- Enable JEPs in preview -->
                        <arg>${argLine}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <!-- Unit test execution -->
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>

                <!-- Configuration for DynamicTests to retain their names -->
                <configuration>
                    <statelessTestsetReporter
                            implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
                        <disable>false</disable>
                        <version>3.0.2</version>
                        <usePhrasedFileName>false</usePhrasedFileName>
                        <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
                        <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
                        <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
                    </statelessTestsetReporter>

                    <consoleOutputReporter
                            implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
                        <disable>false</disable>
                        <encoding>UTF-8</encoding>
                        <usePhrasedFileName>false</usePhrasedFileName>
                    </consoleOutputReporter>

                    <statelessTestsetInfoReporter
                            implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
                        <disable>false</disable>
                        <usePhrasedFileName>false</usePhrasedFileName>
                        <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
                        <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
                    </statelessTestsetInfoReporter>
                </configuration>
            </plugin>

            <plugin>
                <!-- Code coverage -->
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>

                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>default-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.gaul</groupId>
                <artifactId>modernizer-maven-plugin</artifactId>
                <version>${modernizer-maven-plugin.version}</version>

                <executions>
                    <execution>
                        <id>modernizer</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>modernizer</goal>
                        </goals>

                        <configuration>
                            <javaVersion>${java.version}</javaVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
